2.0.1
=====

* Issue #3541414 - The ServerConnection and DCCConnection now encode any
  strings as UTF-8 before transmitting.

2.0
===

* DelayedCommands now use the local time for calculating 'at' and 'due'
  times. This will be more friendly for simple servers. Servers that expect
  UTC times should either run in UTC or override DelayedCommand.now to
  return an appropriate time object for 'now'. For example::

    def startup_bot():
        irc.client.DelayedCommand.now = irc.client.DelayedCommand.utcnow
        ...

1.1
===

* Added irc.client.PeriodicCommandFixedDelay. Schedule this command
  to have a function executed at a specific time and then at periodic
  intervals thereafter.

1.0
===

* Removed `irclib` and `ircbot` legacy modules.

0.9
===

* Fix file saving using dccreceive.py on Windows. Fixes #2863199.
* Created NickMask class from nm_to_* functions. Now if a source is
  a NickMask, one can access the .nick, .host, and .user attributes.
* Use correct attribute for saved connect args. Fixes #3523057.

0.8
===

* Added ServerConnection.reconnect method. Fixes #3515580.

0.7.1
=====

* Added missing events. Fixes #3515578.

0.7
===

* Moved functionality from irclib module to irc.client module.
* Moved functionality from ircbot module to irc.bot module.
* Retained irclib and ircbot modules for backward-compatibility. These
  will be removed in 1.0.
* Renamed project to simply 'irc'.

To support the new module structure, simply replace references to the irclib
module with irc.client and ircbot module with irc.bot. This project will
support that interface through all versions of irc 1.x, so if you've made
these changes, you can safely depend on `irc >= 0.7, <2.0dev`.

0.6.3
=====

* Fixed failing test where DelayedCommands weren't being sorted properly.
  DelayedCommand a now subclass of the DateTime object, where the command's
  due time is the datetime. Fixed issue #3518508.

0.6.2
=====

* Fixed incorrect usage of Connection.execute_delayed (again).
